Enhanced UI responsiveness

--- a/edit/index.html
+++ b/edit/index.html
@@ -21,3 +21,4 @@ Temporary commit content 206
 Temporary commit content 209
 Temporary commit content 221
 Temporary commit content 222
+Temporary commit content 223
