Fixed typos in documentation

--- a/edit/index.html
+++ b/edit/index.html
@@ -4,3 +4,4 @@ Temporary commit content 34
 Temporary commit content 50
 Temporary commit content 56
 Temporary commit content 72
+Temporary commit content 89
