Added initial project plan

--- a/edit/index.html
+++ b/edit/index.html
@@ -18,3 +18,4 @@ Temporary commit content 177
 Temporary commit content 184
 Temporary commit content 198
 Temporary commit content 206
+Temporary commit content 209
