Updated project documentation

--- a/edit/index.html
+++ b/edit/index.html
@@ -29,3 +29,4 @@ Temporary commit content 258
 Temporary commit content 284
 Temporary commit content 288
 Temporary commit content 291
+Temporary commit content 300
