Added initial project plan

--- a/edit/index.html
+++ b/edit/index.html
@@ -10,3 +10,4 @@ Temporary commit content 123
 Temporary commit content 137
 Temporary commit content 138
 Temporary commit content 148
+Temporary commit content 155
