Optimized database queries

--- a/edit/index.html
+++ b/edit/index.html
@@ -8,3 +8,4 @@ Temporary commit content 89
 Temporary commit content 117
 Temporary commit content 123
 Temporary commit content 137
+Temporary commit content 138
