Refactored code for better readability

--- a/edit/index.html
+++ b/edit/index.html
@@ -19,3 +19,4 @@ Temporary commit content 184
 Temporary commit content 198
 Temporary commit content 206
 Temporary commit content 209
+Temporary commit content 221
