Updated project documentation

--- a/edit/index.html
+++ b/edit/index.html
@@ -27,3 +27,4 @@ Temporary commit content 239
 Temporary commit content 257
 Temporary commit content 258
 Temporary commit content 284
+Temporary commit content 288
